--- a/Complement_probabilites_statistique/variables-aléatoires-continues.html
+++ b/Complement_probabilites_statistique/variables-aléatoires-continues.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-09-04" />
+<meta name="date" content="2020-10-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -115,6 +115,7 @@
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#événements"><i class="fa fa-check"></i>Événements</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#probabilité"><i class="fa fa-check"></i>Probabilité</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#variables-aléatoires-discrètes-1"><i class="fa fa-check"></i>Variables aléatoires discrètes</a></li>
+<li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#exercices-supplémentaires"><i class="fa fa-check"></i>Exercices supplémentaires</a></li>
 </ul></li>
 <li class="part"><span><b>V.A.Continues</b></span></li>
 <li class="chapter" data-level="4" data-path="variables-aléatoires-continues.html"><a href="variables-aléatoires-continues.html"><i class="fa fa-check"></i><b>4</b> Variables Aléatoires Continues</a><ul>
@@ -154,6 +155,7 @@
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html"><i class="fa fa-check"></i>Feuille d’exercices 2</a><ul>
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#variables-alétoires-continues"><i class="fa fa-check"></i>Variables alétoires continues</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#couple-de-variables-aléatoires-continues-1"><i class="fa fa-check"></i>Couple de variables aléatoires continues</a></li>
+<li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#exercices-supplémentaires-1"><i class="fa fa-check"></i>Exercices supplémentaires</a></li>
 </ul></li>
 <li class="appendix"><span><b>Annexe</b></span></li>
 <li class="chapter" data-level="A" data-path="tab-normale.html"><a href="tab-normale.html"><i class="fa fa-check"></i><b>A</b> Table de la loi Normale centrée réduite</a></li>
@@ -186,7 +188,7 @@ non dénombrable. On peut citer par exemple, l’heure d’arrivée d’un train
 par <span class="math inline">\(X\)</span> une telle variable.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-45" class="definition"><strong>Définition 4.1  </strong></span><span class="math inline">\(X\)</span> est une <strong>variable aléatoire continue</strong> s’il existe une fonction <span class="math inline">\(f\)</span>
+<p><span id="def:unnamed-chunk-48" class="definition"><strong>Définition 4.1  </strong></span><span class="math inline">\(X\)</span> est une <strong>variable aléatoire continue</strong> s’il existe une fonction <span class="math inline">\(f\)</span>
 non négative définie pour tout <span class="math inline">\(x \in \mathbb{R}\)</span> et vérifiant pour tout
 ensemble <span class="math inline">\(B\)</span> de nombres réels la propriété</p>
 <p><span class="math display" id="eq:def">\[\begin{equation}
@@ -221,7 +223,7 @@ Figure 4.2: L’aire hachurée correspond à des probabilités. <span class="mat
 </div>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-46" class="definition"><strong>Définition 4.2  </strong></span>Pour toute variable aléatoire continue <span class="math inline">\(X\)</span> de densité <span class="math inline">\(f\)</span>:</p>
+<p><span id="def:unnamed-chunk-49" class="definition"><strong>Définition 4.2  </strong></span>Pour toute variable aléatoire continue <span class="math inline">\(X\)</span> de densité <span class="math inline">\(f\)</span>:</p>
 <ul>
 <li><p><span class="math inline">\(f(x) \ge 0 \quad \forall \, x \in \mathbb{R}\)</span></p></li>
 <li><p><span class="math inline">\(\int_{-\infty}^{+\infty}f(x)dx = 1\)</span></p></li>
@@ -266,7 +268,7 @@ probabilité <span class="math display">\[f(x)= \left\lbrace
 <h2>Fonction de répartition d’une v.a.c</h2>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-49" class="definition"><strong>Définition 4.3  </strong></span>Si comme pour les variables aléatoires discrètes, on définit la fonction
+<p><span id="def:unnamed-chunk-52" class="definition"><strong>Définition 4.3  </strong></span>Si comme pour les variables aléatoires discrètes, on définit la fonction
 de répartition de <span class="math inline">\(X\)</span> par:</p>
 <p><span class="math display">\[\begin{aligned}
     F_X \colon  \mathbb{R} &amp;\longrightarrow \mathbb{R} \\
@@ -373,7 +375,7 @@ Déterminer la densité de: <span class="math inline">\(Y=3X+1\)</span>, <span c
 <h3>Espérance d’une v.a.c</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-51" class="definition"><strong>Définition 4.4  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire absolument continue de densité <span class="math inline">\(f\)</span>, on
+<p><span id="def:unnamed-chunk-54" class="definition"><strong>Définition 4.4  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire absolument continue de densité <span class="math inline">\(f\)</span>, on
 appelle espérance de X, le réel <span class="math inline">\(E(X)\)</span>, défini par:</p>
 <span class="math display">\[E(X)= \int_{-\infty}^{+\infty}x f(x) dx\]</span> si cette intégrale est
 convergente.
@@ -417,7 +419,7 @@ dispersion qui correspond au moment centré d’ordre 2 de la variable
 aléatoire <span class="math inline">\(X\)</span>.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-53" class="definition"><strong>Définition 4.5  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une espérance <span class="math inline">\(E(X)\)</span>, on appelle
+<p><span id="def:unnamed-chunk-56" class="definition"><strong>Définition 4.5  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une espérance <span class="math inline">\(E(X)\)</span>, on appelle
 variance de <span class="math inline">\(X\)</span> le réel</p>
 <p><span class="math display">\[V(X)=E\big([X-E(X)]^2\big) = E(X^2) - [E(X)]^2\]</span> Si <span class="math inline">\(X\)</span> est une
 variable aléatoire continue, on calcule <span class="math inline">\(E(X^2)\)</span> en utilisant le
@@ -435,7 +437,7 @@ théorème <a href="variables-aléatoires-continues.html#thm:transfert">4.1</a>,
 </ul>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-54" class="definition"><strong>Définition 4.6  (Ecart-type)  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une variance <span class="math inline">\(V(X)\)</span>, on appelle
+<p><span id="def:unnamed-chunk-57" class="definition"><strong>Définition 4.6  (Ecart-type)  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une variance <span class="math inline">\(V(X)\)</span>, on appelle
 écart-type de <span class="math inline">\(X\)</span>, le réel:</p>
 <span class="math display">\[\sigma_X = \sqrt{V(X)}\]</span>
 </div>
