--- a/Complement_probabilites_statistique/couple-de-variables-aléatoires-continues.html
+++ b/Complement_probabilites_statistique/couple-de-variables-aléatoires-continues.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-09-04" />
+<meta name="date" content="2020-10-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -115,6 +115,7 @@
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#événements"><i class="fa fa-check"></i>Événements</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#probabilité"><i class="fa fa-check"></i>Probabilité</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#variables-aléatoires-discrètes-1"><i class="fa fa-check"></i>Variables aléatoires discrètes</a></li>
+<li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#exercices-supplémentaires"><i class="fa fa-check"></i>Exercices supplémentaires</a></li>
 </ul></li>
 <li class="part"><span><b>V.A.Continues</b></span></li>
 <li class="chapter" data-level="4" data-path="variables-aléatoires-continues.html"><a href="variables-aléatoires-continues.html"><i class="fa fa-check"></i><b>4</b> Variables Aléatoires Continues</a><ul>
@@ -154,6 +155,7 @@
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html"><i class="fa fa-check"></i>Feuille d’exercices 2</a><ul>
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#variables-alétoires-continues"><i class="fa fa-check"></i>Variables alétoires continues</a></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#couple-de-variables-aléatoires-continues-1"><i class="fa fa-check"></i>Couple de variables aléatoires continues</a></li>
+<li class="chapter" data-level="" data-path="feuille-dexercices-2.html"><a href="feuille-dexercices-2.html#exercices-supplémentaires-1"><i class="fa fa-check"></i>Exercices supplémentaires</a></li>
 </ul></li>
 <li class="appendix"><span><b>Annexe</b></span></li>
 <li class="chapter" data-level="A" data-path="tab-normale.html"><a href="tab-normale.html"><i class="fa fa-check"></i><b>A</b> Table de la loi Normale centrée réduite</a></li>
@@ -180,7 +182,7 @@
 <h2>Densité conjointe</h2>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-71" class="definition"><strong>Définition 6.1  </strong></span>On dit que <span class="math inline">\((X,Y)\)</span> est un couple aléatoire continu s’il existe une
+<p><span id="def:unnamed-chunk-74" class="definition"><strong>Définition 6.1  </strong></span>On dit que <span class="math inline">\((X,Y)\)</span> est un couple aléatoire continu s’il existe une
 fonction <span class="math inline">\(f: \mathbb{R}^2 \rightarrow \mathbb{R}\)</span> telle que pour tout
 <span class="math inline">\(D \subseteq \mathbb{R}\)</span> on a</p>
 <span class="math display">\[P\{(X,Y) \in D\} = \iint\limits_{(x,y) \in D} f(x,y) dx dy\]</span>
