--- a/Complement_probabilites_statistique/feuille-dexercices-2.html
+++ b/Complement_probabilites_statistique/feuille-dexercices-2.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-01" />
+<meta name="date" content="2020-10-03" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -430,7 +430,7 @@ est définie par: <span class="math display">\[f(x,y)= \left\lbrace
       0 &amp; \mbox{sinon}
       \end{array}
   \right.
-\]</span></p>
+\]</span>s</p>
 <ol style="list-style-type: decimal">
 <li>A quelles conditions <span class="math inline">\(f\)</span> est elle la densité d’un couple de variable aléatoires réelles <span class="math inline">\((X,Y)\)</span> à valeurs dans <span class="math inline">\(\mathbb{R}^2\)</span>?</li>
 <li>Calculer <span class="math inline">\(C\)</span> en fonction de <span class="math inline">\(\lambda\)</span>.</li>
@@ -440,12 +440,12 @@ est définie par: <span class="math display">\[f(x,y)= \left\lbrace
 </ol>
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-97" class="exercise"><strong>Exercice 6.19  </strong></span>Soit <span class="math inline">\((X,Y)\)</span> un vecteur aléatoire uniformément distribué dans l’ensemble
-<span class="math display">\[D= \{ (x,y) \in \mathbb{R}^2, x\in [0,2] \, \text{et} \, y \in [0,4]\}\]</span></p>
+<p><span id="exr:unnamed-chunk-97" class="exercise"><strong>Exercice 6.19  </strong></span>Soient <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> deux variables aléatoires indépendantes de loi uniforme sur l’intervalle <span class="math inline">\([0 , 2]\)</span> de <span class="math inline">\(\mathbb{R}\)</span>.</p>
 <ol style="list-style-type: decimal">
-<li>Déterminer la densité jointe du couple de variables aléatoires <span class="math inline">\((X,Y)\)</span>.</li>
-<li>Calculer <span class="math inline">\(P(X \le 1, Y\le 2)\)</span>.</li>
-<li>Déterminer les densités marginales de <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span>. Les v.a. <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont elles indépendantes?
+<li>Quelle est la loi de probabilité de <span class="math inline">\(S = X + Y\)</span>?</li>
+<li>Calculez <span class="math inline">\(E(S)\)</span> et <span class="math inline">\(V(S)\)</span>.</li>
+<li>Quelle est la loi de probabilité de <span class="math inline">\(Z = X Y\)</span>?</li>
+<li>Calculez <span class="math inline">\(E(Z)\)</span> et <span class="math inline">\(V(Z)\)</span>.
 </div></li>
 </ol>
 
