--- a/MLcourse/pw-3.html
+++ b/MLcourse/pw-3.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-09-27" />
+<meta name="date" content="2020-10-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -414,7 +414,7 @@ We will consider the variables <code>Age</code> and <code>EstimatedSalary</code>
 <p><strong>7.</strong> Write in a equation the model you obtained in question <strong>5</strong>? (Read the following note concerning this question).</p>
 <div class="rmdtip">
 <p>
-Note that there is three different ways to express the equation of a Logistic Regression model.
+Note that there are three different ways to express the equation of a Logistic Regression model.
 </p>
 <!-- 2- Use inline codes to call the coefficients instead of writing them manually.  -->
 <!-- 3- You can use Latex to simplify writing equations, you just need to put the equation code between two `\$\$`. For example: `\$e^{\\beta_0+\\beta_1 X}\$` will give $e^{\beta_0+\beta_1 X}$. Try some equations on this [website](https://www.codecogs.com/latex/eqneditor.php)). -->
@@ -452,7 +452,7 @@ where
 </center>
 <div class="rmdinsight">
 <p><strong>Extra</strong>: A great <span style="color: Steelblue;"><i class="fab fa-r-project" aria-hidden="true"></i>
-</span> package for visualization if <code>ggplot2</code>. Take a look on this <a href="http://www.r-graph-gallery.com/portfolio/ggplot2-package/" target="_blank">link <i class="fas  fa-external-link-alt "></i></a> for some examples. With this library we obtain the following plot for our model,</p>
+</span> package for visualization is <code>ggplot2</code>. Take a look on this <a href="http://www.r-graph-gallery.com/portfolio/ggplot2-package/" target="_blank">link <i class="fas  fa-external-link-alt "></i></a> for some examples. With this library we obtain the following plot for our model,</p>
 <p><img src="img/glm_ggplot.png" /></p>
 </div>
 <p>I obtained the last figure with these lines of code,</p>
