--- a/MLcourse/decision-trees-random-forests.html
+++ b/MLcourse/decision-trees-random-forests.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-06" />
+<meta name="date" content="2020-10-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -247,7 +247,13 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#quadratic-discriminant-analysis-qda-1"><i class="fa fa-check"></i>Quadratic Discriminant Analysis (QDA)</a></li>
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#comparison"><i class="fa fa-check"></i>Comparison</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html"><i class="fa fa-check"></i><b>5</b> Decision Trees &amp; Random Forests</a></li>
+<li class="chapter" data-level="5" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html"><i class="fa fa-check"></i><b>5</b> Decision Trees &amp; Random Forests</a><ul>
+<li class="chapter" data-level="" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html#the-basics-of-decision-trees"><i class="fa fa-check"></i>The Basics of Decision Trees</a></li>
+<li class="chapter" data-level="" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html#classification-trees"><i class="fa fa-check"></i>Classification Trees</a></li>
+<li class="chapter" data-level="" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html#bagging-random-forests"><i class="fa fa-check"></i>Bagging &amp; Random Forests</a></li>
+<li class="chapter" data-level="" data-path="decision-trees-random-forests.html"><a href="decision-trees-random-forests.html#boosting"><i class="fa fa-check"></i>Boosting</a></li>
+<li><a href="#trees-in-<i class="fab  fa-r-project " style="color:steelblue;"></i>">Trees in <i class="fab  fa-r-project " style="color:steelblue;"></i></a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="pw-5.html"><a href="pw-5.html"><i class="fa fa-check"></i>PW 5</a></li>
 <li class="part"><span><b>II Dimensionality Reduction</b></span></li>
 <li class="chapter" data-level="6" data-path="principal-components-analysis.html"><a href="principal-components-analysis.html"><i class="fa fa-check"></i><b>6</b> Principal Components Analysis</a><ul>
@@ -382,11 +388,66 @@ code span.wa { color: #bf0303; } /* Warning */
 </div>
 <div id="decision-trees-random-forests" class="section level1">
 <h1><span class="header-section-number">5</span> Decision Trees &amp; Random Forests</h1>
-<p>TREES</p>
+<p>In this chapter, we describe <strong>tree-based</strong> methods for <em>regression</em> and <em>classification</em>. Tree-based methods are simple and useful for interpretation. However, they typically are not competitive with the best supervised learning approaches in terms of prediction accuracy. Hence in this chapter we also introduce <em>bagging</em>, <em>random forests</em>,
+and <em>boosting</em>. Each of these approaches involves producing multiple trees
+which are then combined to yield a single consensus prediction. We will
+see that combining a large number of trees can often result in dramatic
+improvements in prediction accuracy, at the expense of some loss in interpretation.</p>
+<p>You are invited to watch the following videos<a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a>. You can download slides<a href="#fn15" class="footnote-ref" id="fnref15"><sup>15</sup></a> used in these videos by clicking <a target="_blank" href="files/trees.pdf">here <i class="far fa-file-pdf-o" aria-hidden="true" style="color:#cf1052"></i></a>.</p>
+<div id="the-basics-of-decision-trees" class="section level3 unnumbered">
+<h3>The Basics of Decision Trees</h3>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6ENTbK3yQUQ?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GfPR7Xhdokc?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+</div>
+<div id="classification-trees" class="section level3 unnumbered">
+<h3>Classification Trees</h3>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hPEJoITBbQ4?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+</div>
+<div id="bagging-random-forests" class="section level3 unnumbered">
+<h3>Bagging &amp; Random Forests</h3>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lq_xzBRIWm4?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+</div>
+<div id="boosting" class="section level3 unnumbered">
+<h3>Boosting</h3>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U3MdBNysk9w?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+</div>
+<div id="547265657320696e203c6920636c6173733d22666162202066612d722d70726f6a6563742022207374796c653d22636f6c6f723a737465656c626c75653b223e3c2f693e" class="section level3 unnumbered">
+<h3>Trees in <i class="fab  fa-r-project " style="color:steelblue;"></i></h3>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0wZUXtvAtDc?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IY7oWGXb77o?modestbranding=1&amp;rel=0&amp;cc_load_policy=1" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</center>
 <p align="right">
 ◼
 </p>
 
+</div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="14">
+<li id="fn14"><p>Source: the famous MOOC <a href="https://online.stanford.edu/courses/sohs-ystatslearning-statistical-learning" target="_blank">Statistical Learning</a><a href="decision-trees-random-forests.html#fnref14" class="footnote-back">↩</a></p></li>
+<li id="fn15"><p>Source: <a href="https://web.stanford.edu/~hastie/">Trevor Hastie’s website</a><a href="decision-trees-random-forests.html#fnref15" class="footnote-back">↩</a></p></li>
+</ol>
 </div>
             </section>
 
