--- a/MLcourse/pw-5.html
+++ b/MLcourse/pw-5.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-14" />
+<meta name="date" content="2020-10-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -450,6 +450,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <div id="pw-5" class="section level1 unnumbered" number="">
 <h1>PW 5</h1>
 <p>In this practical work, we will build some decision trees for both <em>regression</em> and <em>classification</em> problems. Note that there are many packages to do this in <i class="fab  fa-r-project " style="color:steelblue;"></i> . The <code>tree</code> package is the basic package to do so, while the <code>rpart</code><a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a> package seems more widely suggested and provides better plotting features. So we will use the <code>rpart</code> package.</p>
+<div class="rmdcaution">
+<p>It is recommended for correct and better using of <i class="fab  fa-r-project " style="color:steelblue;"></i> functions that you consult their documentations. Every <i class="fab  fa-r-project " style="color:steelblue;"></i> function is well documented indeed. You can do so by writing <code>?function_name</code> or <code>help(function_name)</code>in the console.</p>
+<p>Especially for functions with multiple use, for example, <code>glm()</code> is a function that fits generalizes linear models, one of them is logistic regression when <code>type = "binomial"</code>.</p>
+<p>Another example, is the function <code>predict()</code>, that is a generic function for predictions from the results of various model fitting functions. Its first argument is a <i class="fab  fa-r-project " style="color:steelblue;"></i> object, a model, and the rest of the arguments depends on the nature of the object. If you want to consult the documentation about using <code>predict()</code> for a tree built with <code>rpart()</code>, do <code>?predict.rpart</code> or <code>help(predict.rpart)</code></p>
+</div>
+<div class="rmdtip">
+<p>If you want to run a function from a certain package without loading the package, you can write <code>package::function()</code>. For example <code>MASS::lda()</code> or <code>rpart::rpart()</code>. It is also helpful to remember the name of the package in which the function is defined.</p>
+</div>
 <div id="regression-trees" class="section level2 unnumbered" number="">
 <h2>Regression Trees</h2>
 <div id="single-tree" class="section level3 unnumbered" number="">
