--- a/Complement_probabilites_statistique/feuille-dexercices-2-corrections.html
+++ b/Complement_probabilites_statistique/feuille-dexercices-2-corrections.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-12" />
+<meta name="date" content="2020-10-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -196,6 +196,8 @@
 <div id="feuille-dexercices-2-corrections" class="section level1 unnumbered" number="">
 <h1>Feuille d’exercices 2: Corrections</h1>
 <p><img src="corrections/4.png" /></p>
+<p><img src="corrections/5.png" /></p>
+<p><img src="corrections/6.png" /></p>
 
 </div>
 
