--- a/Statinf/tp-statistique-descriptive-avec-r.html
+++ b/Statinf/tp-statistique-descriptive-avec-r.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-18" />
+<meta name="date" content="2020-11-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -565,7 +565,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 <p><strong>Représentation graphique pour le croisement d’une variable qualitative et d’une variable quantitative</strong></p>
 <p>On peut réaliser une boîte à moustache des valeurs de la variable quantitative en fonction des modalités de la variables qualitative, pour cela on peut utliser la fonction <code>boxplot()</code>. Plus précisémeent, on utilise le paramètre <code>formula</code> qui permet de spécifier que nous voulons une boîte à moustache de la variable
 quantitative en fonction (caractère <code>~</code> ) de la variable quantitative.</p>
-<p><strong>18.</strong> Afficher sur la même figure la fréquence cardiaque en fontion du sexe. Interpréter la figure.</p>
+<p><strong>18.</strong> Afficher sur une même figure la fréquence cardiaque en fontion du sexe. Interpréter la figure.</p>
 <p>La figure souhaitée est la suivante:</p>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-56-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>19.</strong> Afficher sur la même figure la taille (variable <code>Height</code>) en fontion du sexe. Interpréter la figure.</p>
