--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-10-18" />
+<meta name="date" content="2020-11-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -907,8 +907,8 @@ effectif
 <p>Le nombre de classes doit être choisi de façon à ce que l’effectif moyen par intervalle soit suffisamment grand afin de pas être gêné par des irrégularités locales et, au contraire, afin de mettre en évidence une tendance générale.</p>
 <p>Soit l’exemple suivant: on s’intéresse à la taille de 237 étudiants<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>.</p>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-15-1.png" width="70%" style="display: block; margin: auto;" /></p>
-<p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Celà permet aussi de présenter la distribution de l’échantillon.</p>
-<p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relativespour pouvoir superposer facilement des distributions de référence.</p>
+<p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Cela permet aussi de présenter la distribution de l’échantillon.</p>
+<p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relatives pour pouvoir superposer facilement des distributions de référence.</p>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-16-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>Un autre graphique à base des quartiles est la boîte à dispersion ou <strong>boîte à moustaches</strong> (<strong>boxplot</strong>). Un rectangle, délimité par les premier et troisième quartiles, représente <span class="math inline">\(50\%\)</span> de la population. Dans ce rectangle, une barre centrale représente la médiane. De part et d’autre du rectangle, on figure deux segments dont la longueur est environ 1.5 fois l’écart interquartile: “environ” car chaque segment est en fait délimité par une observation réelle incluse dans cet intervalle, celle qui est la plus éloignée de la médiane. Enfin, les observations au-delà de ces limites sont représentées individuellement.</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-17"></span>
@@ -1120,7 +1120,7 @@ L’étude de la volatilité est fondamentale dans les analyses de risque financ
 </div>
 <div id="statistique-descriptive-bidimensionnelle" class="section level2">
 <h2><span class="header-section-number">1.6</span> Statistique descriptive bidimensionnelle</h2>
-<p>Dans cette section, on sintérese a l’étude simultanée de deux variables <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span>, étudiées sur le même échantillon, toujours noté <span class="math inline">\(\Omega\)</span>. L’objectif essentiel des méthodes présentées est de mettre en évidence une éventuelle variation simultanée des deux variables, que nous appellerons alors <strong>liaison</strong>. Dans certains cas, cette liaison peut être considérée a priori comme causale, une variable <span class="math inline">\(X\)</span> expliquant l’autre <span class="math inline">\(Y\)</span>; dans d’autres, ce n’est pas le cas, et les deux variables jouent des rôles symétriques. Dans la pratique, il conviendra de bien différencier les deux situations et une liaison n’entraîne pas nécessairement une
+<p>Dans cette section, on s’intérese a l’étude simultanée de deux variables <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span>, étudiées sur le même échantillon, toujours noté <span class="math inline">\(\Omega\)</span>. L’objectif essentiel des méthodes présentées est de mettre en évidence une éventuelle variation simultanée des deux variables, que nous appellerons alors <strong>liaison</strong>. Dans certains cas, cette liaison peut être considérée a priori comme causale, une variable <span class="math inline">\(X\)</span> expliquant l’autre <span class="math inline">\(Y\)</span>; dans d’autres, ce n’est pas le cas, et les deux variables jouent des rôles symétriques. Dans la pratique, il conviendra de bien différencier les deux situations et une liaison n’entraîne pas nécessairement une
 causalité.</p>
 <p>Les données sont présentées de la façon suivante: on dispose de deux séries <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> représentant l’observation des variables <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sur les mêmes <span class="math inline">\(n\)</span> individus: on a une série bidimensionnelle <span class="math inline">\((X,Y)\)</span> de taille <span class="math inline">\(n\)</span>:</p>
 <table class="table table-striped" style="width: auto !important; margin-left: auto; margin-right: auto;">
@@ -1228,7 +1228,7 @@ variables là que l’on représente (c’est en genéral cette seconde solution
 appelle variable centrée associée à <span class="math inline">\(X\)</span> la variable <span class="math inline">\(X-\overline{x}\)</span> (elle est de moyenne
 nulle et d’écart-type <span class="math inline">\(\sigma_{X}\)</span>), et variable centrée et réduite (ou tout simplement
 variable réduite) associe à <span class="math inline">\(X\)</span> la variable <span class="math inline">\(\frac{X-\overline{x}}{\sigma}\)</span> (elle est de moyene nulle et
-d’écart-type égal à un). Une variable centrée er réduite s’exprime sans unité.</p>
+d’écart-type égal à un). Une variable centrée et réduite s’exprime sans unité.</p>
 </div>
 <div id="coefficient-de-corrélation-linéaire" class="section level4 unnumbered">
 <h4>Coefficient de corrélation linéaire</h4>
@@ -1447,12 +1447,12 @@ et ils vérifient <span class="math inline">\(\sum_{\ell=1}^{r} n_{\ell.}=\sum_{
 <p>On peut représenter graphiquement deux variables qualitatives avec des diagrammes en barre parallèles (<strong>mosaïcplots</strong>).</p>
 </div>
 <p><strong>Indices de liaison</strong></p>
-<p>Lorsque tous les profis-lignes sont égaux, ce qui est équivalent à ce que tous
+<p>Lorsque tous les profil-lignes sont égaux, ce qui est équivalent à ce que tous
 les profil-colonnes soient égaux et que</p>
 <p><span class="math display">\[
 \forall(\ell, h) \in\{1, \ldots, r\} \times\{1, \ldots, c\} : n_{\ell h}=\frac{n_{\ell .} n_{.h}}{n}
 \]</span></p>
-<p>on dit qu’il n’exist aucune forme de liaison entre les deux variables considérées <span class="math inline">\(X\)</span> et <span class="math inline">\(Y .\)</span> Par suite, la mesure de la laison va se faire en évaluant l’écart
+<p>on dit qu’il n’existe aucune forme de liaison entre les deux variables considérées <span class="math inline">\(X\)</span> et <span class="math inline">\(Y .\)</span> Par suite, la mesure de la laison va se faire en évaluant l’écart
 entre la situation observée et l’état de non liaison défini ci-dessus.</p>
 <p><strong>Khi-deux</strong></p>
 <p>Il est courant en statistique de comparer une table de contingence observée,
